# funding-service-design-fund-application-builder

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.pullpreview  Procfile  README.md  build.py  docker-compose-dev.yml  docker-compose.pullpreview.yml  docker-compose.pullpreview_bkp.yml  docker-compose.yml  pyproject.toml  remove_dummy_data.py  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  sonar-project.properties  static_assets.py
.devcontainer/: devcontainer.json
.github/workflows/: codeql-analysis.yml  copilot_deploy.yml  pullpreview.yml  test_e2e.yml  test_e2e_aws.yml  validate_pr.yml
app/: auth.py  create_app.py
app/all_questions/: metadata_utils.py  read_forms.py
app/blueprints/application/: forms.py  routes.py  services.py
app/blueprints/dev/: routes.py
app/blueprints/fund/: forms.py  routes.py  service.py  services.py
app/blueprints/fund_builder/: routes.py
app/blueprints/index/: routes.py
app/blueprints/round/: forms.py  routes.py  services.py
app/blueprints/self_serve/: routes.py
app/blueprints/template/: forms.py  routes.py  services.py
app/blueprints/templates/: routes.py
app/db/migrations/: .current-alembic-head  env.py
app/db/models/: __init__.py  application_config.py  assessment_config.py  fund.py  round.py
app/db/queries/: application.py  clone.py  fund.py  round.py  util.py
app/export/config_generator/: generate_fund_round_config.py  generate_fund_round_form_jsons.py  generate_fund_round_html.py  helpers.py
app/export_config/: generate_all_questions.py  generate_assessment_config.py  generate_form.py  generate_fund_round_config.py  generate_fund_round_form_jsons.py  generate_fund_round_html.py  helpers.py
app/import/: load_form_json copy.py  load_form_json.py
app/import_config/: load_form_json.py
app/import_config/files_to_import/: organisation-name-sample.json  project-name-sample.json
app/shared/: data_classes.py  form_json_validation.py  form_store_api.py  forms.py  generic_table_page.py  helpers.py  json_validation.py  page_tracker.py  table_pagination.py  validators.py
app/templates/: 403.html  500.html  base.html  dashboard.html  delete_confirmation.html  footer.html  head.html  login.html  navigation.html  select_application.html  select_fund.html
app/templates/macros/: genericTablePage.html  pagination.html  search.html  tablePagination.html  wtfToGovUk.html
app/templates/partials/: flash_template.html  link.html  mhclg-header.html
config/: __init__.py
config/envs/: default.py  development.py  test.py  uat.py  unit_test.py
copilot/fsd-fund-application-builder/: manifest.yml
copilot/fsd-fund-application-builder/addons/: fsd-fund-application-builder-cluster.yml
docs/: database.md  getting_started.md  run.md
govuk_frontend_ext/: README.md  fields.py
govuk_frontend_ext/templates/govuk_frontend_ext/: datetime.html
scripts/: clone_lizts_for_cloned_components.py  migrate_component_condition_into_condition_table_data.py  migrate_sub_component_data.py  migration-task-script.py  populate_form_json.py  remove_dummy_data.py
tasks/: __init__.py  db_tasks.py  export_tasks.py  fake_fund_tasks.py  test_data.py
tests/: conftest.py  helpers.py  seed_test_data.py  test-import-form.json  test_build_assessment_config.py  test_build_forms.py  test_clone.py  test_config_export.py  test_config_generators.py  test_config_import.py  test_db.py  test_db_application_CRUD.py  test_form_import.py  test_generate_form.py  test_integration.py  test_routes.py  test_template_management.py  unit_test_data.py
tests/blueprints/application/: test_routes.py
tests/blueprints/fund/: test_routes.py
tests/blueprints/index/: test_routes.py
tests/e2e/: README.MD  config.py  conftest.py  dataclass.py  http_client.py  mock_pre_award.py
tests/integration/: test_back_link.py  test_integration.py  test_pagination.py
tests/shared/: test_back_link.py  test_generic_table_page.py  test_helpers.py  test_pagination.py
tests/test_data/: Organisation-and-local-authority-information-template.json  asset-information.json  dataset-information.json  favourite-colours-sarah.json  funding-required-cof-25.json  multi-input-exported.json  multi_input.json  optional-all-components.json  org-info.json  organisation-and-local-authority.json  projects.json  required-all-components.json  test-section.json
tests/test_govuk_frontend_ext/: test_fields.py
tests/unit/: conftest.py  seed_test_data.py  test_build_assessment_config.py  test_config_import.py  test_db.py  test_db_application_CRUD.py  test_form_import.py  test_generate_form.py  test_integration.py
(+144 files in other folders)
