[project]
name = "funding-service-design-fund-application-builder"
version = "0.0.1"
description = "Prototype Fund Application Builder (FAB) app for building application forms"
authors = ["MHCLG"]
license = "MIT License"

requires-python = "~=3.10.0"
dependencies = [
    "airium==0.2.6",
    "flask-babel==4.0.0",
    "flask-compress==1.15",
    "flask-migrate==4.0.7",
    "flask-sqlalchemy==3.1.1",
    "flask-talisman==1.1.0",
    "flask-wtf==1.2.1",
    "flask==3.0.3",
    "funding-service-design-utils==5.2.0",
    "govuk-frontend-jinja==3.4.0",
    "jsonschema==4.23.0",
    "marshmallow-sqlalchemy==1.0.0",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "psycopg2-binary==2.9.9",
    "requests==2.32.3",
    "sqlalchemy-json==0.7.0",
    "sqlalchemy-utils==0.41.2",
    "sqlalchemy[mypy]==2.0.36",
]

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
ignore = ['E203', 'W503']
count = true

[tool.isort]
profile = "black"
force_single_line = "true"

[tool.uv]

[dependency-groups]
dev = [
    "beautifulsoup4==4.12.3",
    "black==24.8.0",
    "debugpy==1.8.9",
    "djlint==1.34.1",
    "flake8-pyproject==1.2.3",
    "flake8==7.1.1",
    "invoke==2.2.0",
    "pre-commit==3.8.0",
    "pytest-env==1.1.3",
    "pytest-html==4.1.1",
    "pytest-mock==3.14.0",
    "pytest==8.3.3",
    "python-dotenv==1.0.1",
]
