[project]
name = "funding-service-design-fund-application-builder"
version = "0.0.1"
description = "Prototype Fund Application Builder (FAB) app for building application forms"
authors = ["MHCLG"]
license = "MIT License"

requires-python = "~=3.10.0"
dependencies = [
    "airium==0.2.6",
    "flask-babel==4.0.0",
    "flask-compress==1.17",
    "flask-migrate==4.0.7",
    "flask-sqlalchemy==3.1.1",
    "flask-talisman==1.1.0",
    "flask-wtf==1.2.2",
    "flask==3.0.3",
    "funding-service-design-utils==5.2.0",
    "govuk-frontend-jinja==3.4.0",
    "jsonschema==4.23.0",
    "marshmallow-sqlalchemy==1.0.0",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "psycopg2-binary==2.9.10",
    "requests==2.32.3",
    "sentry-sdk==2.10.0",
    "sqlalchemy-json==0.7.0",
    "sqlalchemy-utils==0.41.2",
    "sqlalchemy[mypy]==2.0.36",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "W",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C90",  # mccabe cyclomatic complexity
    "G",  # flake8-logging-format
]
ignore = []
exclude = [
    "venv*",
    ".venv*",
    "__pycache__",
]
mccabe.max-complexity = 12

[tool.uv]

[dependency-groups]
dev = [
    "beautifulsoup4==4.12.3",
    "debugpy==1.8.11",
    "djlint==1.34.1",
    "invoke==2.2.0",
    "pre-commit==3.8.0",
    "pytest-env==1.1.5",
    "pytest-html==4.1.1",
    "pytest-mock==3.14.0",
    "pytest==8.3.4",
    "python-dotenv==1.0.1",
    "ruff==0.8.4",
]
